<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ninja.soroosh.chatopia</groupId>
    <artifactId>chatopia</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>chatbot</name>
    <description>Chatopia</description>
    <packaging>pom</packaging>

    <properties>
        <java.version>15</java.version>
    </properties>


    <modules>
        <module>core</module>
        <module>examples</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>15</source>
                        <target>15</target>
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
